:bug: Fix layout spec with proper names

--- a/frontend/translations/de.po
+++ b/frontend/translations/de.po
@@ -3643,11 +3643,11 @@ msgid "workspace.options.layout.direction.column"
 msgstr "Spalte"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.direction.reverse-column"
+msgid "workspace.options.layout.direction.column-reverse"
 msgstr "Spalte-umgekehrt"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.direction.reverse-row"
+msgid "workspace.options.layout.direction.row-reverse"
 msgstr "Reihe-umgekehrt"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
