--- a/frontend/translations/he.po
+++ b/frontend/translations/he.po
@@ -3605,11 +3605,11 @@ msgid "workspace.options.layout.direction.column"
 msgstr "עמודה"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.direction.reverse-column"
+msgid "workspace.options.layout.direction.column-reverse"
 msgstr "היפוך עמודה"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.direction.reverse-row"
+msgid "workspace.options.layout.direction.row-reverse"
 msgstr "היפוך שורה"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
