Tooltip updated for Padding and Corner options
Closes #2964

Signed-off-by: Prithvi Tharun <ptrithu8@gmail.com>

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -3829,7 +3829,7 @@ msgstr "All corners"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/measures.cljs
 msgid "workspace.options.radius.single-corners"
-msgstr "Individual corners"
+msgstr "Independent corners"
 
 msgid "workspace.options.recent-fonts"
 msgstr "Recent"
