--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -443,7 +443,9 @@ msgid "dashboard.import.import-error"
 msgstr "There was a problem importing the file. The file wasn't imported."
 
 msgid "dashboard.import.import-message"
-msgstr "%s files have been imported successfully."
+msgid_plural "dashboard.import.import-message"
+msgstr[0] "1 file have been imported successfully."
+msgstr[1] "%s files have been imported successfully."
 
 msgid "dashboard.import.import-warning"
 msgstr "Some files containted invalid objects that have been removed."
