:bug: Fix unpublish and delete shared library warning messages

--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -1809,21 +1809,21 @@ msgstr[1] "Borrar archivos"
 msgid "modals.delete-shared-confirm.hint"
 msgid_plural "modals.delete-shared-confirm.hint"
 msgstr[0] ""
-"Si lo borras, esos elementos pasarán a formar parte de la biblioteca local "
-"de este archivo. Cualquier elemento en desuso se perderá."
+"Si lo borras, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en el archivo (¡ningún diseño se romperá!)."
 msgstr[1] ""
-"Si los borras, esos elementos pasarán a formar parte de la biblioteca local "
-"de este archivo. Cualquier elemento en desuso se perderá."
+"Si los borras, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en el archivo (¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.hint-many"
 msgid_plural "modals.delete-shared-confirm.hint-many"
 msgstr[0] ""
-"Si lo borras, esos elementos pasarán a formar parte de las bibliotecas "
-"locales de estos archivos. Cualquier elemento en desuso se perderá."
+"Si lo borras, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en los archivo (¡ningún diseño se romperá!)."
 msgstr[1] ""
-"Si los borras, esos elementos pasarán a formar parte de las bibliotecas "
-"locales de estos archivos. Cualquier elemento en desuso se perderá."
+"Si los borras, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en los archivo (¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.message"
@@ -2014,21 +2014,22 @@ msgstr[1] "Despublicar"
 msgid "modals.unpublish-shared-confirm.hint"
 msgid_plural "modals.unpublish-shared-confirm.hint"
 msgstr[0] ""
-"Si la despublicas, esos elementos pasarán a formar parte de la biblioteca "
-"local de este archivo."
+"Si la despublicas, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en el archivo (¡ningún diseño se romperá!)."
+
 msgstr[1] ""
-"Si las despublicas, esos elementos pasarán a formar parte de la biblioteca "
-"local de este archivo."
+"Si las despublicas, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en el archivo (¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.hint-many"
 msgid_plural "modals.unpublish-shared-confirm.hint-many"
 msgstr[0] ""
-"Si la despublicas, esos elementos pasarán a formar parte de las bibliotecas "
-"locales de estos archivos."
+"Si la despublicas, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en los archivo (¡ningún diseño se romperá!)."
 msgstr[1] ""
-"Si las despublicas, esos elementos pasarán a formar parte de las "
-"bibliotecas locales de estos archivos."
+"Si las despublicas, sus elementos no estarán disponibles para otros archivos. "
+"Los elementos que hayan sido utilizados permanecerán en los archivo (¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.message"
