--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -1726,21 +1726,22 @@ msgstr[1] "Delete files"
 msgid "modals.delete-shared-confirm.hint"
 msgid_plural "modals.delete-shared-confirm.hint"
 msgstr[0] ""
-"If you delete it, those assets will move to the local library of this file. "
-"Any unused assets will be lost."
+"If you delete it, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in this file (no design will be broken!)."
+
 msgstr[1] ""
-"If you delete them, those assets will move to the local library of this "
-"file. Any unused assets will be lost."
+"If you delete them, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in this file (no design will be broken!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.hint-many"
 msgid_plural "modals.delete-shared-confirm.hint-many"
 msgstr[0] ""
-"If you delete it, those assets will move to the local libraries of these "
-"files. Any unused assets will be lost."
+"If you delete it, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in these files (no design will be broken!)."
 msgstr[1] ""
-"If you delete them, those assets will move to the local libraries of these "
-"files. Any unused assets will be lost."
+"If you delete them, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in these file (no design will be broken!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.message"
@@ -1928,21 +1929,21 @@ msgstr[1] "Unpublish"
 msgid "modals.unpublish-shared-confirm.hint"
 msgid_plural "modals.unpublish-shared-confirm.hint"
 msgstr[0] ""
-"If you unpublish it, those assets will move to the local library of this "
-"file."
+"If you unpublish it, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in this file (no design will be broken!)."
 msgstr[1] ""
-"If you unpublish them, those assets will move to the local library of this "
-"file."
+"If you unpublish them, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in this file (no design will be broken!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.hint-many"
 msgid_plural "modals.unpublish-shared-confirm.hint-many"
 msgstr[0] ""
-"If you unpublish it, those assets will move to the local libraries of these "
-"files."
+"If you unpublish it, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in these files (no design will be broken!)."
 msgstr[1] ""
-"If you unpublish them, those assets will move to the local libraries of "
-"these files."
+"If you unpublish them, those assets will no longer be available from other files. "
+"Assets that have already been used will remain in these file (no design will be broken!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.message"
